--- a/first task/css/style.css
+++ b/first task/css/style.css
@@ -1,72 +1,19 @@
-:root
+#greycol
 {
-    --background-color: #2F303A;
+    color: grey
 }
-:root
+.yellow
 {
-    --text-color-white: white;
+    color: yellow;
 }
-:root
+.text-box > p:nth-child(2)
 {
-    --blue-color: #137BC9;
+    color: grey;
 }
-*{
-    font-family: 'Roboto', sans-serif;  /*  Тут я використав chatGPT */
-    text-decoration: none;
-    color: #212121;
-}
-.our_team
+.text-box > div > p
 {
-    background-color: #F5F4FA;
+    color: red;
 }
-.business_solutions
-{
-    background-color: var(--background-color);
-}
-.order_service
-{
-    color: white;
-    background-color: var(--blue-color);
-    border: none;
-}
-.main_title
-{
-    font-family: 'Raleway';
-}
-.blue_text
-{
-    color: var(--blue-color);
-}
-.white_text
-{
-    color: var(--text-color-white);
-}
-footer
-{
-    background-color: var(--background-color);
-}
-.grey_background li
-{
-    background-color:#F5F4FA;                           /* Тут я хотів зробити як в фігмі сіру тінь, але я не знаю як це зробить нормально і я зробив як знаю🙃*/
-}
-.white_text_opacity
-{
-    color: var(--text-color-white);
-    opacity: 60%;
-}
-.grey_text_color
-{
-    color: #757575;
-}
-#blue_hover:hover
-{
-    color: var(--blue-color);
-}
-.all:visited
-{
-    color: var(--blue-color);
-}
-.web-sites:visited
-{
-    color: var(--blue-color);
+p{
+    color: green;
 }
